...
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:textColor="@color/headerPrimary"/>

            <EditText
                android:id="@+id/inputEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter event name"
                android:background="@android:drawable/edit_text"
                android:backgroundTint="@color/backgroundBox"
                android:padding="10dp"
...
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:textColor="@color/headerPrimary"/>

            <EditText
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="Enter event details"
                android:gravity="top"
                android:background="@android:drawable/edit_text"
                android:backgroundTint="@color/backgroundBox"
...
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:textColor="@color/headerPrimary"/>

            <EditText
                android:id="@+id/inputEventLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter event location"
                android:background="@android:drawable/edit_text"
                android:backgroundTint="@color/backgroundBox"
                android:padding="10dp"
...
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:textColor="@color/headerPrimary"/>

            <EditText
                android:id="@+id/inputMaxParticipants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter number"
                android:inputType="number"
                android:background="@android:drawable/edit_text"
                android:backgroundTint="@color/backgroundBox"
...
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:textColor="@color/headerPrimary"/>

            <EditText
                android:id="@+id/inputWaitingListSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter maximum waiting list size"
                android:inputType="number"
                android:background="@android:drawable/edit_text"
                android:backgroundTint="@color/backgroundBox"
...
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"
                android:textColor="@color/headerPrimary"/>

            <CheckBox
                android:id="@+id/checkboxGeolocationRequired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Require Geolocation for Entrants"
                android:textSize="14sp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/inputEventStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Start"
                    android:inputType="datetime"
                    android:background="@android:drawable/edit_text"
                    android:backgroundTint="@color/backgroundBox"
                    android:padding="10dp"
                    android:layout_marginEnd="8dp" />

                <EditText
                    android:id="@+id/inputEventEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="End"
                    android:inputType="datetime"
                    android:background="@android:drawable/edit_text"
...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/inputRegistrationStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Start Date"
                    android:focusable="false"
                    android:background="@android:drawable/edit_text"
                    android:backgroundTint="@color/backgroundBox"
                    android:padding="10dp"
                    android:layout_marginEnd="8dp" />

                <EditText
                    android:id="@+id/inputRegistrationEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="End Date"
                    android:focusable="false"
                    android:background="@android:drawable/edit_text"
...
                    android:text="Cancel"
                    android:textAllCaps="false"
                    android:background="@drawable/button_color"
                    android:textColor="@color/button_text_color"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Submit"
                    android:textAllCaps="false"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/button_color"
...
